tooling/nargo_cli/tests/snapshots/execution_success/databus_in_fn_with_empty_arr/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "_empty",
        "type": {
          "kind": "array",
          "length": 0,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      },
      {
        "name": "value_1",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "value_2",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "databus"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : 2",
    "private parameters indices : [0, 1]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "EXPR [ (1, _0) (-1, _2) 1 ]",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "EXPR [ (-1, _1) (1, _2) 0 ]",
    "INIT CALLDATA 0 (id: 1, len: 1, witnesses: [_1])",
    "",
    ""
  ],
  "debug_symbols": "lY7LCsIwEEX/ZdZZVFNB8ysiJY9JGQhJyEOQ0H83LRbqRnB57j1zmQYGVZ0n8jZkEPcGLmhZKPhODc5blKP0K+UiUwFx5QzQGxC3cWFgySGIy7A8GPD/9PGnfhr4l99BJXKO5un4Y4+fMpFUDj9oq9eHtrzi3uz3MQWNpiZcl7auz78B",
  "file_map": {
    "50": {
      "source": "fn main(_empty: [u32; 0], value_1: u32, value_2: call_data(0) u32) {\n    assert_eq(value_1 + 1, value_2);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
